--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Cours GITHUB</h1>
-    <h2>version2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Doloribus libero quia dolores laborum perspiciatis perferendis ducimus 
-        saepe quod amet aperiam, tempora fuga odio. Consequatur repudiandae quidem aliquid!
-        Accusantium, ipsam ullam!</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Repellat nulla eum alias? Sed quod, provident eveniet 
-        aliquid laudantium ipsum itaque!</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Professional Portfolio | Data Scientist & AI Engineer</title>
+    <meta name="description" content="Professional portfolio of a Data Scientist and AI Engineer specializing in machine learning, artificial intelligence, and innovative tech solutions" />
+    <meta name="author" content="Your Name" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="Professional Portfolio | Data Scientist & AI Engineer" />
+    <meta property="og:description" content="Professional portfolio showcasing expertise in data science, machine learning, and AI engineering" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
